--- a/gui-app/gui/pages/login/login.css
+++ b/gui-app/gui/pages/login/login.css
@@ -1,6 +1,7 @@
 body{
+
   font-family: 'Open Sans', sans-serif;
-  background: white;
+  background: rgb(237, 231, 217);
   margin: 0 auto 0 auto;
   width:100%;
   text-align:center;
